# cvmpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  DESIGN.md  README.md  SPEC.md  TASKS.md
include/cvm/: ast.hpp  chunk.hpp  compiler.hpp  disassembler.hpp  lexer.hpp  opcode.hpp  parser.hpp  token.hpp  value.hpp  vm.hpp
scripts/: arithmetic.cvm  conditionals.cvm  fibonacci.cvm  loops.cvm  variables.cvm
src/: compiler.cpp  disassembler.cpp  lexer.cpp  main.cpp  parser.cpp  vm.cpp
tests/: test_cli.sh  test_compiler.cpp  test_disassembler.cpp  test_lexer.cpp  test_parser.cpp  test_vm.cpp
